# rs-rayon-batch

./: Cargo.toml  LICENSE  README.md  README.zh_CN.md  check-coverage-thresholds.sh  update-submodule.sh
src/: lib.rs  rayon_batch_executor.rs  rayon_batch_executor_build_error.rs  rayon_batch_executor_builder.rs
tests/: mod.rs
tests/docs/: mod.rs  readme_tests.rs
tests/executor/: mod.rs  rayon_batch_executor_build_error_tests.rs  rayon_batch_executor_builder_tests.rs  rayon_batch_executor_tests.rs
tests/support/: mod.rs  panic_payload.rs  progress_reporter.rs  test_callable.rs  test_task.rs
