[package]
name = "qubit-rayon-batch"
version = "0.4.2"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-rayon-batch"
description = "Rayon-backed batch executor implementation for Qubit Rust libraries"
homepage = "https://github.com/qubit-ltd/rs-rayon-batch"
documentation = "https://docs.rs/qubit-rayon-batch"
readme = "README.md"
keywords = ["rayon", "batch", "executor", "cpu", "concurrency"]
categories = ["concurrency", "development-tools"]
exclude = [
    "coverage.sh",
    "check-coverage-thresholds.sh",
    ".circleci/*",
    "align-ci.sh",
    "ci-check.sh",
    ".llvm-cov.toml",
]

[lib]
name = "qubit_rayon_batch"
doctest = true

[dependencies]
qubit-function = "0.12"
qubit-progress = "0.4"
qubit-batch = "0.5"
rayon = "1.12"
thiserror = "2.0"
