[package]
name = "qubit-rayon-batch"
version = "0.7.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-rayon-batch"
description = "Rayon-backed batch executor implementation for Qubit Rust libraries"
homepage = "https://github.com/qubit-ltd/rs-rayon-batch"
documentation = "https://docs.rs/qubit-rayon-batch"
readme = "README.md"
keywords = ["rayon", "batch", "executor", "cpu", "concurrency"]
categories = ["concurrency", "development-tools"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_rayon_batch"
doctest = true

[dependencies]
qubit-function = "0.15"
qubit-progress = "0.5"
qubit-batch = "0.9"
rayon = "1.12"
thiserror = "2.0"
